# formeval

./: .gitattributes  .gitignore  LICENSE  README.md  examples.py  exp.py  nca_demo.py  nltk_setup.py  run_examples.py  setup.cfg  setup.py
example_data/: commongen.dev.jsonl  pascal_pred.jsonl  pascal_pred.jsonl.bleu.report  pascal_pred.jsonl.cider.report  pascal_pred.jsonl.nca.report  pascal_ref.jsonl
src/formeval/: _bleu.py  _evaluator.py  base_evaluator.py  bleu.py  cider.py  evaluator.py  nca.py  nca_demo.py  ngram.py  nltk_bleu.py  processor.py  setup.py  spice.py  utils.py
src/lfeval/: cider.py  utils.py
