[metadata]

name = formeval
version = 1.0.6
author = Dongqi Su
description = Language Form Evaluation for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudongqi/formeval.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nltk >= 3.5
    lemminflect >= 0.22

[options.packages.find]
where = src